# FirstTeamApp

./: .env_example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  run.py
FTApp/: __init__.py  config.py  constants.py  data_for_db.py  dev.db  forms.py  models.py  routes.py  run.py  security.py
FTApp/auth/: forms.py  models.py  routes.py  security.py
FTApp/main/: forms.py  models.py  routes.py
FTApp/templates/: base.html  candidate_profile.html  candidates.html  login.html  main.html  opportunities.html  opportunity.html  registration.html  team_profile.html
tests/: conftest.py
tests/auth/: test_routes.py
tests/main/: test_routes.py
