[tool.poetry]
name = "firstteamapp"
version = "0.1.0"
description = ""
authors = ["Valeriy Vasilenko <hitehnik132@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.3"
flask-login = "^0.6.2"
jwt = "^1.3.1"
flask-sqlalchemy = "^3.0.5"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
